landing page fixed on mobile medium

--- a/styles/Main.module.scss
+++ b/styles/Main.module.scss
@@ -4,8 +4,9 @@
   margin-top: 3rem;
   height: 100%;
   display: grid;
-
-  // overflow: hidden;
+  @media (min-width: 48rem) {
+    margin-top: 1rem;
+  }
 }
 
 .content {
