--- a/styles/MainPageCard.module.scss
+++ b/styles/MainPageCard.module.scss
@@ -2,10 +2,15 @@
 
 .main_card {
   visibility: hidden;
-  width: 90%;
-  max-width: 90rem;
+  width: 100%;
   align-self: center;
   justify-self: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  .main_card_content {
+    width: 80%;
+  }
 
   p,
   h1,
@@ -54,17 +59,17 @@
     width: 10rem;
   }
 
-  @media (min-width: 50rem) {
-    & {
-      // padding: 0 5rem;
-      margin-left: 7rem;
-    }
-  }
+  // @media (min-width: 50rem) {
+  //   & {
+  //     // padding: 0 5rem;
+  //     margin-left: 7rem;
+  //   }
+  // }
 
-  @media (min-width: 72.44rem) {
-    width: 80%;
-    display: flex;
-    flex-direction: column;
-    max-width: 1000px;
-  }
+  // @media (min-width: 72.44rem) {
+  //   width: 80%;
+  //   display: flex;
+  //   flex-direction: column;
+  //   max-width: 1000px;
+  // }
 }
