--- a/styles/MobileNav.module.scss
+++ b/styles/MobileNav.module.scss
@@ -172,4 +172,10 @@
       white-space: pre;
     }
   }
+
+  @media (min-width: 48rem) {
+    & {
+      display: none;
+    }
+  }
 }
