--- a/styles/Navbar.module.scss
+++ b/styles/Navbar.module.scss
@@ -1,14 +1,7 @@
 @import '_variables.scss';
 
 .nav {
-  visibility: hidden;
-  display: grid;
-  padding-top: 1rem;
-  grid-template-columns: 1fr 2fr 1fr;
-  grid-template-rows: 1fr 1fr;
-  height: 10rem;
-  align-items: center;
-
+  display: none;
   svg {
     height: 2rem;
     margin-left: 1.8rem;
@@ -31,8 +24,9 @@
     grid-area: 1 / 3 / span 1 / span 1;
   }
 
-  @media (min-width: 45rem) {
+  @media (min-width: 48rem) {
     & {
+      display: grid;
       grid-template-columns: 3fr 3.3fr 1fr;
       grid-template-rows: 1fr;
       height: 5rem;
