--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,4 +1,4 @@
-$color-darkest: #0e1c3a;
+$color-darkest: #020b22;
 $color-darker: #10295f;
 $color-less-white: #4dd2ff;
 $color-white-sub: #d3985dd5;
